# gynjo

./: Cargo.toml  LICENSE.txt  README.md  profile.gynj
.github/workflows/: build.yml  coverage.yml  rust.yml
core/: constants.gynj  core.gynj  units.gynj
src/: env.rs  error.rs  errors.rs  exprs.rs  format_with_env.rs  interpreter.rs  intrinsics.rs  lexer.rs  list.rs  literals.rs  main.rs  number.rs  numbers.rs  parser.rs  primitives.rs  quantity.rs  stmts.rs  symbol.rs  tokens.rs  tuple.rs  types.rs  unit.rs  unit_map.rs  units.rs  values.rs  variable.rs
src/expressions/: bin_expr.rs  bin_op.rs  cluster.rs  expr.rs  lambda.rs  mod.rs
src/primitives/: mod.rs  numbers.rs  prim.rs  text.rs  types.rs
src/types/: mod.rs  primitives.rs  type_.rs
src/values/: closure.rs  list.rs  mod.rs  quantity.rs  range.rs  tuple.rs  units.rs  val.rs
tests/: core.rs
